# network-labs

./: README.md  backbone.clab.drawio  pyproject.toml
backbone/: __init__.py  backbone.clab.yml  config_template.j2  generate_configs.py
backbone/configs/: P1.txt  P2.txt  P3.txt  P4.txt  P5.txt  P6.txt  PE1.txt  PE2.txt  PE3.txt
network_labs/: __init__.py  __main__.py  filters.py
